[package]
name = "jupiter"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
trust-dns-resolver = "0.20"
reqwest = { version = "0.11.9", default-features = false, features = ["blocking", "json"] }
rouille = "3.5.0"
rand = "0.8.4"
tokio = { version = "1.4.0", features = ["rt", "rt-multi-thread", "macros", "signal", "sync"] }
tokio-postgres = { version = "0.7.3", features = ["with-chrono-0_4", "with-serde_json-1"] }
postgres-openssl = "0.5.0"
postgres-types = "0.2.1"
serde_postgres = "0.2.0"
postgres = "0.19.2"
openssl = "*"
log = "0.4.14"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
nix = "0.23"

[features]
default = ["reqwest/default-tls", "trust-dns-resolver/dns-over-native-tls"]